# epub-editor-slint

./: .gitignore  Cargo.toml  README.md
src/: epub.rs  html.rs  main.rs
ui/: appwindow.slint
