[package]
name = "slint-rust-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.7.2"
rfd = "0.15"

epub = "2.1"                                   # 用于解析和创建EPUB文件
zip = "2.2"                                    # 用于处理ZIP文件
tokio = { version = "1", features = ["full"] } # 用于异步操作

# 解析 html
scraper = "0.12"
reqwest = { version = "0.11", features = ["blocking", "json"] }
url = "2"
html2md = "0.2.14"
pulldown-cmark = "0.9"                                          # 用于 Markdown 转换

[build-dependencies]
slint-build = "1.7.2"
